--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,5 @@
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "devCommand": "npm run dev",
-  "installCommand": "npm install"
+  "installCommand": "npm install --legacy-peer-deps"
 }
